--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: BID CI Pipeline
 
 on:
   push:
-    branches: [main, develop, feature/**]
+    branches: [main, develop, staging, feature/**]
   pull_request:
-    branches: [main, develop]
+    branches: [main, develop, staging]
 
 jobs:
   build-and-test:
@@ -24,37 +24,49 @@ jobs:
           pip install -r requirements.txt
           pip install pytest black flake8
 
-      # Auto-format code instead of failing CI
+      # Auto format code instead of failing CI
       - name: Auto format code with Black
         run: black src/
 
-      - name: Lint code
+      - name: Lint code (non-blocking)
         run: flake8 src/ || true
 
-      - name: Run tests
-        run: pytest -q || true  # no tests yet
+      - name: Run tests (non-blocking)
+        run: pytest -q || true
 
       - name: Log in to GHCR
-        run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u "MahanthLBS" --password-stdin
+        run: |
+          echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u "MahanthLBS" --password-stdin
 
       - name: Build Docker image
         run: |
           IMAGE_NAME=ghcr.io/mahanthlbs/bid-system
           docker build -t $IMAGE_NAME:${{ github.sha }} .
 
-      - name: Push image to GHCR
+      - name: Push image + environment tags
         run: |
           IMAGE_NAME=ghcr.io/mahanthlbs/bid-system
+
+          # Push commit-SHA image
           docker push $IMAGE_NAME:${{ github.sha }}
 
-          # Tag for development
+          # Development environment build
           if [[ "${GITHUB_REF}" == "refs/heads/develop" ]]; then
+            echo "Tagging image as dev-latest"
             docker tag $IMAGE_NAME:${GITHUB_SHA} $IMAGE_NAME:dev-latest
             docker push $IMAGE_NAME:dev-latest
           fi
 
-          # Tag for production
+          # Staging environment build
+          if [[ "${GITHUB_REF}" == "refs/heads/staging" ]]; then
+            echo "Tagging image as staging-latest"
+            docker tag $IMAGE_NAME:${GITHUB_SHA} $IMAGE_NAME:staging-latest
+            docker push $IMAGE_NAME:staging-latest
+          fi
+
+          # Production environment build
           if [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
+            echo "Tagging image as prod-latest"
             docker tag $IMAGE_NAME:${GITHUB_SHA} $IMAGE_NAME:prod-latest
             docker push $IMAGE_NAME:prod-latest
           fi
