Disable publishing for electron-builder

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "appId": "com.bid.system",
     "productName": "BID System",
     "asar": true,
+    "publish": "never",
     "directories": {
       "output": "dist"
     },
