--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "appId": "com.bid.system",
     "productName": "BID System",
     "asar": true,
-    "publish": "never",
+    "publish": [],
     "directories": {
       "output": "dist"
     },
