--- a/.github/workflows/desktop-build.yml
+++ b/.github/workflows/desktop-build.yml
@@ -5,12 +5,6 @@ on:
     branches: [ main, develop, staging ]
   workflow_dispatch:
 
-# Shared caching speeds up builds massively
-# (Electron downloads, npm node_modules, etc)
-env:
-  ELECTRON_CACHE: ~/.cache/electron
-  ELECTRON_BUILDER_CACHE: ~/.cache/electron-builder
-
 jobs:
 
   # -------------------------------
@@ -18,14 +12,32 @@ jobs:
   # -------------------------------
   build-linux:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js 18
         uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: 'npm'
+
+      - name: Cache Electron
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/electron
+            ~/.cache/electron-builder
+          key: ${{ runner.os }}-electron-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-electron-
+
+      - name: Cache Node modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-modules-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies
         run: npm ci
@@ -38,20 +50,39 @@ jobs:
         with:
           name: bid-linux-appimage
           path: dist/*.AppImage
+          retention-days: 7
 
   # -------------------------------
   # 🟦 WINDOWS EXE BUILD
   # -------------------------------
   build-windows:
     runs-on: windows-latest
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js 18
         uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: 'npm'
+
+      - name: Cache Electron (Windows)
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~\AppData\Local\electron\Cache
+            ~\AppData\Local\electron-builder\Cache
+          key: ${{ runner.os }}-electron-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-electron-
+
+      - name: Cache Node modules (Windows)
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-modules-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies
         run: npm ci
@@ -59,8 +90,11 @@ jobs:
       - name: Build Windows Installer (.exe)
         run: npm run dist:win
 
-      - name: Upload EXE Installer
+      - name: Upload Windows Installer
         uses: actions/upload-artifact@v4
         with:
           name: bid-windows-installer
-          path: dist/*.exe
+          path: |
+            dist/*.exe
+            dist/*.exe.blockmap
+          retention-days: 7
